Tue Feb 24 22:04:59 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: added kde_sounddir and set kde_minidir to
	kde_icondir/mini to break not too much

Sun Feb 15 18:25:50 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: added bugfix by Bob Miller <kbob@engr.sgi.com>
	(correct reset of IFS)
	
Wed Feb 11 00:53:11 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: made shadow under Linux default, since the
	binaries will work also under non-shadow systems. The only problem 
	left is PAM, so I disabled shadow in case, PAM is present

Tue Feb 10 16:46:32 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: added test for nice to find out, if the option
	-nice works for the screensavers

	* acinclude.m4.in: port to LynxOS. For this I moved all library
	search routines in KDE_MISC_TESTS, so I don't need to write this
	in every package

	* README: some grammar fixes

	* acinclude.m4.in: search for the libs in the exec_prefix, when
	it's present
	
Sun Feb  8 14:07:23 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: updated all packages

	* libtool.m4.in: applied patch for libtool.m4.in to show the
	correct default for shared and static
	

Sat Feb  7 10:56:00 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: good news - KDE is relocatable again.

	* libtool.m4.in: updated to latest libtool 1.0i

Fri Feb  6 21:26:51 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: added a AC_PROVIDE for AC_PROG_CC and
	AC_PROG_CPP to KDE_CHECK_COMPILERS

Thu Feb  5 16:27:47 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: put $QTDIR/bin before /usr/bin in the path to
	look for moc. I don't know why, but I got a report, that configure
	found /usr/bin/moc under Solaris

Fri Jan 30 15:47:50 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: export LIBRARY_PATH after reset to the saved
	value
	
	* acinclude.m4.in: unset the LIBRARY_PATH to get a relieable
	result when trying to find, if Qt compiles without -L
