@@ -59,19 +59,46 @@ AC_REQUIRE([AC_CHECK_RPATH])
 AC_REQUIRE([AC_CHECK_BOOL])
 
 if test "$1" = "default"; then
-  kde_htmldir="\$(prefix)/share/doc/HTML"
-  kde_appsdir="\$(prefix)/share/applnk"
-  kde_icondir="\$(prefix)/share/icons"
-  kde_sounddir="\$(prefix)/share/sounds"
-  kde_datadir="\$(prefix)/share/apps"
-  kde_locale="\$(prefix)/share/locale"
-  kde_cgidir="\$(exec_prefix)/cgi-bin"
-  kde_confdir="\$(prefix)/share/config"
-  kde_mimedir="\$(prefix)/share/mimelnk"
-  kde_toolbardir="\$(prefix)/share/toolbar"
-  kde_wallpaperdir="\$(prefix)/share/wallpapers"
-  kde_bindir="\$(exec_prefix)/bin"
-  kde_partsdir="\$(exec_prefix)/parts"
+
+  if test -z "$kde_htmldir"; then
+    kde_htmldir="\$(prefix)/share/doc/HTML"
+  fi
+  if test -z "$kde_appsdir"; then
+    kde_appsdir="\$(prefix)/share/applnk"
+  fi
+  if test -z "$kde_icondir"; then
+    kde_icondir="\$(prefix)/share/icons"
+  fi
+  if test -z "$kde_sounddir"; then
+    kde_sounddir="\$(prefix)/share/sounds"
+  fi
+  if test -z "$kde_datadir"; then
+    kde_datadir="\$(prefix)/share/apps"
+  fi
+  if test -z "$kde_locale"; then
+    kde_locale="\$(prefix)/share/locale"
+  fi
+  if test -z "$kde_cgidir"; then
+    kde_cgidir="\$(exec_prefix)/cgi-bin"
+  fi
+  if test -z "$kde_confdir"; then
+    kde_confdir="\$(prefix)/share/config"
+  fi
+  if test -z "$kde_mimedir"; then
+    kde_mimedir="\$(prefix)/share/mimelnk"
+  fi
+  if test -z "$kde_toolbardir"; then
+    kde_toolbardir="\$(prefix)/share/toolbar"
+  fi
+  if test -z "$kde_wallpaperdir"; then
+    kde_wallpaperdir="\$(prefix)/share/wallpapers"
+  fi
+  if test -z "$kde_bindir"; then
+    kde_bindir="\$(exec_prefix)/bin"
+  fi
+  if test -z "$kde_partsdir"; then
+    kde_partsdir="\$(exec_prefix)/parts"
+  fi
   AC_MSG_RESULT(defaults)	
 
 else 
@@ -277,6 +304,7 @@ if test -z "$x_libraries" || test "$x_libraries" = xNONE; then
  else
   X_LDFLAGS="-L$x_libraries"
   all_libraries=$X_LDFLAGS
+  
 fi
 
 AC_SUBST(X_INCLUDES)
@@ -387,7 +415,7 @@ test -n "$QTDIR" && qt_incdirs="$QTDIR/include $QTDIR $qt_incdirs"
 AC_FIND_FILE(qmovie.h, $qt_incdirs, qt_incdir)
 ac_qt_includes=$qt_incdir
 
-qt_libdirs="$ac_qt_libraries /usr/lib/qt/lib /usr/local/qt/lib /usr/lib/qt /usr/lib $x_libraries $QTLIB"
+qt_libdirs="$ac_qt_libraries /usr/lib/qt/lib /usr/local/qt/lib /usr/lib/qt /usr/X11R6/lib /usr/lib $x_libraries $QTLIB"
 test -n "$QTDIR" && qt_libdirs="$QTDIR/lib $QTDIR $qt_libdirs"
 AC_FIND_FILE(libqt.so libqt.so.1.30 libqt.so.1.31 libqt.so.1 libqt.a libqt.sl, $qt_libdirs, qt_libdir)
 ac_qt_libraries=$qt_libdir
@@ -1092,11 +1120,21 @@ AC_ARG_ENABLE(rpath,
       [  --disable-rpath         do not use the rpath feature of ld],
       USE_RPATH=$enableval, USE_RPATH=yes)
 if test -z "$KDE_RPATH" && test "$USE_RPATH" = "yes"; then
+
   KDE_RPATH="-rpath \$(kde_libraries)"
+
   if test -n "$qt_libraries"; then
-    KDE_RPATH="$KDE_RPATH -rpath \$(qt_libraries) $KDE_EXTRA_RPATH"
+    KDE_RPATH="$KDE_RPATH -rpath \$(qt_libraries)"
+  fi
+  dnl $x_libraries is set to /usr/lib in case
+  if test -n "$X_LDFLAGS"; then 
+    KDE_RPATH="$KDE_RPATH -rpath \$(x_libraries)"
+  fi
+  if test -n "$KDE_EXTRA_RPATH"; then
+    KDE_RPATH="$KDE_RPATH \$(KDE_EXTRA_RPATH)"
   fi
 fi 
+AC_SUBST(KDE_EXTRA_RPATH)
 AC_SUBST(KDE_RPATH)
 AC_MSG_RESULT($USE_RPATH)
 ])
